--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-.canvas1 {
-    height: 100%;
+.particle-container-1 {
+    height: 100vh;
     width: 100%;
+    box-sizing: border-box;
+    border-bottom: 1px solid #eee;
+    padding: 0.5rem 0;
+    position: relative;
 }
