Added overlay in particle containers

--- a/index.css
+++ b/index.css
@@ -1,8 +1,16 @@
-.particle-container-1 {
+.particle-container {
     height: 100vh;
     width: 100%;
     box-sizing: border-box;
-    border-bottom: 1px solid #eee;
     padding: 0.5rem 0;
     position: relative;
+}
+
+.particle-overlay {
+    position: absolute;
+    left:0;
+    top:0;
+    right:0;
+    bottom: 0;
+    background: rgba(0,0,0,0.7);
 }
