--- a/index.css
+++ b/index.css
@@ -14,3 +14,12 @@
     bottom: 0;
     background: rgba(0,0,0,0.7);
 }
+
+.particle-overlay .caption {
+    text-align: center;
+    position: absolute;
+    color: #FFF;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
